<resources>
    <string name="app_name">묘한경복궁</string>
    <string name="main">쓰다듬어 주세요</string>
    <string name="intro1">묘종 10년, 신묘년</string>
    <string name="intro2">경복궁에 큰 소란이 인다</string>
    <string name="myojong_name">묘종</string>
    <string name="naesi_name">김내관</string>
    <string name="seja_name">진묘대군</string>
    <string name="sanggung_name">한상궁</string>
    <string name="myohyeon_name">묘현왕후</string>
    <string name="cat1_name">태평이</string>
    <string name="cat2_name">태생이</string>
    <string name="cat3_name">태양이</string>
    <string name="sajeong_in_title">사정전 내부</string>
    <string name="sajeong_title">사정전</string>
    <string name="jaseon_title">자선당</string>
    <string name="naesoju_title">내소주방</string>
    <string name="gyotae_title">교태전</string>
    <string name="hyangwon_title">향원정</string>
    <string name="sujeong_title">수정전</string>
    <string name="geunjeong_title">근정전</string>
    <string name="sajeong_info">사정전은 정무를 보는 집무실과 같은 역할을 했던 곳으로, 왕과 신하가 머리를 맞대며 학문을 토론하는 경연이 자주 벌어지기도 했다. \&apos;사정<![CDATA[(思政)]]>\&apos;이란 생각하고 정치하라는 뜻을 담고 있다. 근정전 뒷편에 자리 잡고 있으며 좌우에 만춘전과 천추전을 두고 사정전의 공간 기능을 보완하도록 했다. 현재는 이 두 건물이 독립된 전각의 형태이지만 원래는 복도 각으로 연결되게 하였다. 사정전은 왕의 집무실인 만큼 왕의 주요활동이 행해진 곳이기도 하다. 특히 세종 대에는 종친들을 모아 연회를 베풀었을 뿐만 아니라, 공을 치는 놀이 \&apos;타구\&apos;가 자주 벌어졌다는 기록이 남아 있다. 세종은 왕자 시절부터 하인들과 어울려 타구를 했다. 특히 날씨가 추워 궁궐 밖에 나가기 어려운 겨울부터 연초까지 이 놀이를 즐겼다고 한다.</string>
    <string name="jaseon_info">동궁은 황태자<![CDATA[·]]>왕세자를 일컫는 말인 동시에 그들이 거처하는 궁 자체를 의미하기도 한다. 조선 초기의 동궁은 궁궐 밖에 있었는데, 경복궁 안에 동궁이 조성된 시기는 1427년(세종 9년) 9월이었다. 세종은 궐내의 정전 동쪽에 동궁을 지었고 자선당을 중심으로 하면서 승화당과 계조당을 추가로 지었다.\n자선당은 세자가 공부하는 장소이다. \&apos;자선<![CDATA[(資善)]]>\&apos;은 \&apos;선함을 도움 받는다\&apos;는 뜻으로, 북송<![CDATA[(北宋)]]> 때 황태자가 강학하는 장소를 자선당이라 한 것에서 유래했고 태자 혹은 세자가 공부하는 장소를 모두 자선이라 했다. 자선당이 창건되었을 때에는 국왕이 정사를 보는 장소로 사용되었고, 강녕전과 교태전 공사를 할 때에는 국왕이 머물기도 했다. <![CDATA[《세종실록》]]> 오례에 의하면 세자와 관련된 의례는 모두 자선당에서 거행했다. <![CDATA[《국조오례의》]]>에서는 자선당을 \&apos;동궁의 정당\&apos;이라 했고 궁궐지에서는 \&apos;동궁\&apos;이라 표현했다.</string>
    <string name="naesoju_info">소주방은 음식을 조리<![CDATA[·]]>보관<![CDATA[·]]>제공하던 공간으로 흔히 수라간이라 부른다. 왕의 침전인 강녕전의 동쪽에 자리 잡고 있으며, 기능과 담당하는 음식 종류에 따라 크게 내소주방, 외소주방, 생과방으로 나뉜다. 궁중에서는 음식을 한곳에서 만들지 않고 각 전각마다 주방상궁이 딸려서 따로 음식을 만들어 먹었다. 내소주방에서는 왕과 왕비의 수라를 담당하였는데 주로 일상식과 각종 찬품(반찬)을 만들었다. 수라상은 왕의 침전으로 옮겨지는 동안 식어 버리기 쉬웠다. 때문에 배선실인 퇴선간에서 보관하였다가 식은 음식을 데워 다시 상을 지어 올렸다. 내소주방 동쪽으로는 외소주방이 위치해 있는데 차례나 탄신, 연회와 같은 왕실 행사에 쓰이는 잔치 음식을 장만하였다. 생과방은 평상시의 수라 이외에 음료와 과자 등의 다과류를 만들었다. 궁궐에 특별히 큰 행사가 열릴 때에는 잔치를 위하여 \&apos;숙설소<![CDATA[(熟設所)]]>\&apos;라는 임시기구를 설치하기도 하였다.</string>
    <string name="gyotae_info">교태전은 왕비의 침전이자 왕비가 업무를 처리하는 공간이다. 왕비는 교태전에 거처하면서 궁 안 생활을 총지휘했다. 궁궐 안의 건물 가운데 가장 화려하게 치장되었는데, 뒤뜰의 아미산 위에 아름다운 꽃무늬를 새긴 굴뚝이 남아 있어 왕비의 주택이 지녔던 높은 품격의 일면을 잘 보여 준다. 강녕전과 마찬가지로 지붕에 용마루를 두고 있지 않고, 내부에는 가구를 거의 두지 않은 것이 특징이다. 강녕전 영역과 달리 교태전은 양쪽 부속 건물인 원길헌, 함홍각, 건순각 등 여러 행각들이 복도로 연결되어 있어 건물 간 통행에 편리했다. 교태전 출입문인 양의문의 양쪽에는 행각이 위치한다. 이 행각에는 왕비의 수행인인 상궁나인들이 거처했다. 본래 경복궁이 창건되었을 때에는 강녕전이 국왕 부부의 침전이었으나, 세종 대에 왕비를 위한 공간으로 교태전을 마련한 것으로 추정된다.</string>
    <string name="hyangwon_info">향원정은 경복궁 후원의 향원지라는 연못의 인공 섬 위에 만든 정자이다. 왕족들의 사적인 휴식 공간으로 이용되었다. 경회루가 웅장하다면 향원정은 아늑한 분위기를 풍긴다. 향원정의 모태는 \&apos;취로정<![CDATA[(翠露亭)]]>\&apos;으로, <![CDATA[《세조실록》]]>에 경복궁 후원에 정자를 세웠다는 기록이 있다. 이후 임진왜란 때 경복궁이 불타면서 소실되었다가 고종 때 다시 조성되면서 향원정이라는 이름을 얻게 되었다. 향원정이라는 이름은 중국 고전의 \&apos;향기는 멀수록 더욱 맑다<![CDATA[(香遠益淸)]]>\&apos;라는 구절에서 따온 것이라고 알려져 있다. 원래는 왕실 가족들이 이용하기에 편리하도록 북쪽 건청궁으로 이어지는 \&apos;취향교\&apos;라는 다리가 있었으나, 한국 전쟁 때 파괴된 후 지금처럼 남쪽으로 놓았다. 1880년대말에는 연못에서 스케이트 시범대회가 열려 군중의 호응을 얻기도 했다.</string>
    <string name="sujeong_info">수정전은 근정전의 서쪽, 경회루 연못 바로 앞인 남쪽 정면에 위치하며 궐내 각사 가운데 현재 유일하게 남아있는 건물로 역사적<![CDATA[·]]>건축적 의미가 매우 크다. \&apos;수정<![CDATA[(修政)]]>\&apos;은 \&apos;정사를 잘 수행함\&apos;이라는 의미를 지니고 있다. 세종 때에는 집현전으로 쓰였고 세종 28년(1446) 9월에 훈민정음이 창제된 곳이기도 하다. 임진왜란으로 소실 후 고종 4년(1867)에 재건하였다. 고종 대 일상 집무 공간으로 사용되다가 1894년 갑오개혁 때 내각 본부인 군국기무처로 사용되었으며, 1915년 \&apos;조선물산공진회\&apos;를 개최하며 수정전 앞의 궐내 각사 들이 완전히 철거되었다. 재건 당시 수정전 주변에는 약 200칸의 행각과 전각이 들어서 있었으며 수정전 건물의 좌우로 복도를 내어 주변 행각과 바로 연결했으나 현재는 그 흔적만 남아있다. 국왕의 편전으로 쓰였기에 왕의 출입이 빈번하여 관청 건물로는 드물게 정면에 월대를 두었다.</string>
    <string name="geunjeong_info">근정전은 조선 정궁의 정전이다. \&apos;근정<![CDATA[(勤政)]]>\&apos;이란 이름은 \&apos;부지런하게 정치하라\&apos;는 뜻이며, 경복궁을 설계한 정도전이 지은 것으로 알려져 있다. 조선 전기 정궁의 역할을 한 경복궁에서 중심 공간이었던 근정전에서는 수많은 의식과 행사가 열렸다. 이곳에서 즉위식을 거행한 왕은 정종, 세종, 세조, 성종, 중종, 명종, 선조 7명으로 확인된다. 또한 외국 사신을 접견하면서 다례와 불꽃놀이를 행했으며, 근정전 앞에서 과거 시험을 치르고 합격자를 발표하기도 했다. 1592년 임진왜란으로 경복궁은 정궁의 역할을 상실했다. 조선 후기 내내 폐허로 있었던 근정전이 다시 제 모습을 찾은 것은 고종 5년(1868) 흥선대원군이 경복궁을 중건하면서였다. 고종 때 잠시 왕실의 권위를 보여 주는 최고의 공간으로 자리했던 근정전은 1896년 고종이 경복궁을 떠나고 1910년 일제 강점 시기가 오면서 그 위엄을 점차 잃게 되었다.</string>
    <string name="jaseon_quiz_q">자선당은 세자의 침소이다.</string>
    <string name="jaseon_quiz_a">정답입니다.\n(자선당은 세자가 공부하는 장소이다.)</string>
    <string name="naesoju_quiz_q">잔치음식을 준비하는 방은 내소주방이다.</string>
    <string name="naesoju_quiz_a">정답입니다.\n(외소주방에서 잔치음식을 준비하고, 내소주방은 수라를 주로 다룬다.)</string>
    <string name="gyotae_quiz_q">교태전은 왕비의 침전이다.</string>
    <string name="gyotae_quiz_a">정답입니다.</string>
    <string name="hyangwon_quiz_q">향원정 2층은 여름보다는 겨울을 보내기에 좋다.</string>
    <string name="hyangwon_quiz_a">정답입니다.\n(온돌이 깔린 1층이 겨울나기에 더 좋다.)</string>
    <string name="sujeong_quiz_q">수정전의 수정은 정사를 잘 수행한다는 의미이다.</string>
    <string name="sujeong_quiz_a">정답입니다.</string>
    <string name="sajeong_in_myojong_s1">
        어서 오게!\n과인의 집무실인 이곳 사정전까지 잘 와 주었네.</string>
    <string name="sajeong_in_myojong_s2">
        내 자네를 부른 까닭은 친히 부탁할 것이 있어서라네.\n</string>
    <string name="sajeong_in_myojong_s3">
        지난밤 과인이 아끼는 고양이 셋이 궁에서 모습을 감추었다네!\n잠시 조는 사이…가 아니라 업무에 열중한 사이 사라져 버린 걸세!</string>
    <string name="sajeong_in_myojong_s4">
        듣자 하니 고양이들이 자네를 아주 잘 따른다더군.\n부디 과인의 사라진 고양이들을 찾아 주게.</string>
    <string name="sajeong_in_myojong_s5">
        태생이, 태양이, 태평이 모두 과인이 큰 정을 준 아이들이라네.\n추위와 굶주림에 떨고 있을 것을 생각하니 일이 손에 잡히지 않는군….</string>
    <string name="sajeong_in_myojong_s6">
        곧 이곳 사정전에서 여러 대신들이 모여 학문을 토론하는\n경연이 열릴 예정이라 내 더 이상의 설명은 힘들 것 같네.</string>
    <string name="sajeong_in_myojong_s7">
        자세한 사정은 김내관에게 일러두었으니 따라가 보게.\n</string>
    <string name="sajeong_naesi_s1">
        저는 주상전하를 곁에서 모시는 김내관이라 하옵니다.\n</string>
    <string name="sajeong_naesi_s2">
        고양이 세 마리를 모두 찾으시면\n전하께서 관직과 귀한 물품을 하사하겠다 하셨습니다.</string>
    <string name="sajeong_naesi_s3">
        우선, 궁궐 내부가 그려진 지도를 드릴 테니 맡은 일에 보태십시오.\n지도를 참고하시면 보다 수월하게 고양이를 찾으실 수 있을 것입니다.</string>
    <string name="sajeong_naesi_s4">
        화면 좌측 상단의 보따리를 펴면\n지도와 방문하실 장소의 목록을 확인하실 수 있습니다.</string>
    <string name="sajeong_naesi_s5">
        그리고 화면 우측 상단을 보시면\n찾으셔야 할 고양이를 알 수 있습니다.</string>
    <string name="sajeong_naesi_s6">
        한 가지 귀띔을 드리자면, 지난밤 자시(오후 11시~오전 1시)경에\n세자저하의 침소에서 고양이 울음소리가 들렸다 하던데…. 흠흠!</string>
    <string name="sajeong_naesi_s7">
        우선 세자저하의 침소가 있는\n동궁전으로 가 보시는 게 어떠실런지요?\n</string>
    <string name="jaseon_seja_s1">
        안녕! 반가워~\n듣자 하니 네가 아바마마의 고양이들을 찾는 중이라며?</string>
    <string name="jaseon_seja_s2">
        마침 공부하기 싫던 차에 잘 됐어!\n내가 하얗고 토실토실한 고양이가 어디로 갔는지 알고 있거든.</string>
    <string name="jaseon_seja_s3">
        하지만 맨입으로 알려줄 수는 없단 말야~\n</string>
    <string name="jaseon_seja_s4">
        잠시 나랑 놀다 가면 안될까?\n너한테만 특별히 동궁전을 소개시켜 줄게!</string>
    <string name="jaseon_seja_s5">
        이곳 동궁은 세자인 나와 미래의 세자빈이 살고 있는 곳이야.\n</string>
    <string name="jaseon_seja_s6">
        궁궐의 동쪽에 있어서 동궁이라고 부르는데\n그래서 궁궐 사람들은 나를 동궁마마라고 부르기도 해.</string>
    <string name="jaseon_seja_s7">
        동궁 안에서도 이곳 자선당은 스승님과 함께 공부를 하는 곳이야.\n매일 7시간 내내 앉아서 경전을 읽거나 시를 짓는 다니까!</string>
    <string name="jaseon_seja_s8">
        훌륭한 국왕이 되기 위해서는 지덕체와 문무를 겸비해야 한다나….\n회강이라고 하는 시험도 수시로 보고….</string>
    <string name="jaseon_seja_s9">
        세자로 사는 것도 쉬운 일이 아니라구!\n</string>
    <string name="jaseon_seja_s10">
        아바마마께서 특별히 부탁하셨다더니 정말인가 보네!\n</string>
    <string name="jaseon_seja_s11">
        사실 태평이는 내가 데리고 있었어, 히히!\n아바마마께는 비밀로 해 줄 거지?</string>
    <string name="jaseon_seja_s12">
        아, 대신이라긴 뭐 하지만 한 가지 사실을 알려 주자면\n아바마마의 고양이들이 생선을 아주 좋아한다지?</string>
    <string name="jaseon_seja_s13">
        듣기론 오늘 수라(식사)에 굴비가 올라 온다던데…. \n</string>
    <string name="jaseon_seja_s14">
        내소주방에서 지금 쯤 한창 수라를 준비하고 있을 테니\n그쪽으로 가보는 게 어때?</string>
    <string name="naesoju_sanggung_s1">
        아휴, 이놈의 고양이들을 그냥….\n(궁시렁 궁시렁) </string>
    <string name="naesoju_sanggung_s2">
        이런.\n오셨으면 기척을 내시지 그러셨습니까.\n</string>
    <string name="naesoju_sanggung_s3">
        저는 이곳 내소주방을 관리하는 주방상궁입니다.\n주상전하와 중전마마를 비롯한 마마님들의 수라를 책임지고 있지요.</string>
    <string name="naesoju_sanggung_s4">
        그런데 이…고양이들이 글쎄,\n오늘 진지에 올라갈 굴비를 물고는 감쪽같이 사라졌지 뭡니까!</string>
    <string name="naesoju_sanggung_s5">
        전하께서 가장 좋아하시는 반찬이 굴비 반찬인데….\n그래서 급하게 굴비반찬을 대신할 찬을 만들고 있는 중입니다.</string>
    <string name="naesoju_sanggung_s6">
        일손이 많이 부족하니, 수라상 준비하는 일을 도와주시면\n고양이가 도망간 방향을 알려 드리겠습니다.</string>
    <string name="naesoju_sanggung_s7">
        휴…. 감사합니다.\n덕분에 한숨 덜었습니다.</string>
    <string name="naesoju_sanggung_s8">
        지나가는 나인들 말로는 어쩐지 억울하게 생긴 고양이 한 마리가\n중전마마께서 계시는 교태전 쪽으로 갔다는군요.</string>
    <string name="naesoju_sanggung_s9">
        그곳으로 가 보시는 게 좋을 듯 합니다.\n</string>
    <string name="gyotae_myohyeon_s1">
        게 누구인가?\n이곳은 자네 같은 외부인이 함부로 드나들 수 없는 장소일 터.</string>
    <string name="gyotae_myohyeon_s2">
        교태전은 중전이 거처하는 침전이자\n궁에서 일어나는 모든 일들을 관리하는 곳이라네.</string>
    <string name="gyotae_myohyeon_s3">
        이곳에 오는 길에 강녕전을 지나쳐 왔겠지?\n</string>
    <string name="gyotae_myohyeon_s4">
        강녕전은 주상전하께서 거처하시는 침소로 사랑채 역할을,\n이곳 교태전은 안채 역할을 하는 곳이라고 보면 된다네.</string>
    <string name="gyotae_myohyeon_s5">
        그래, 그래서 어떤 연유와 배짱으로 이러한 교태전을 찾았는가?\n</string>
    <string name="gyotae_myohyeon_s6">
        흐음, 과연.\n간밤에 큰 소란이 일었다더니 또 그 말썽쟁이 고양이들 일이군.</string>
    <string name="gyotae_myohyeon_s7">
        그렇다 해도 함부로 교태전에 들어온 자네를\n그냥 돌려보낼 수는 없으니….</string>
    <string name="gyotae_myohyeon_s8">
        내 마음을 너그러이 써, 자네에게 벌을 내리는 대신\n문제를 맞추면 고양이가 있을 만한 장소를 안내해 주겠네.</string>
    <string name="gyotae_myohyeon_s9">
        약속은 지켜야지.\n </string>
    <string name="gyotae_myohyeon_s10">
        억울하게 생긴 고양이라, 태생이를 말하는 듯 하군.\n사실 태생이는 내 침전에서 실뭉치를 가지고 놀고 있다네.</string>
    <string name="gyotae_myohyeon_s11">
        으흠.\n모쪼록 다른 이들에게는 비밀로 해두는 게 좋을 걸세.</string>
    <string name="gyotae_myohyeon_s12">
        그리고 태생이와 함께 놀던 노란 고양이를 한 마리 더 보았네.\n내 기척에 놀라 향원정 쪽으로 도망갔으니 그곳으로 가보도록 하게.</string>
    <string name="hyangwon_taeyang_s1">
        야옹!\n(용케 냐를 찾았군!)</string>
    <string name="hyangwon_taeyang_s2">
        냥 야아옹 냐냥냥!\n(여긴 내가 경복궁에서 소주방 다음으로 좋아하는 향원정이다냥!)</string>
    <string name="hyangwon_taeyang_s3">
        야앙, 냐오오옹.\n(식사도 배불리 했겠다, 아름다운 경치를 구경하러 왔다냥.)</string>
    <string name="hyangwon_taeyang_s4">
        니야앙 야옹 냥.\n(이곳 향원정은 상감마마를 비롯한 왕실 가족들만 출입할 수 있다냥.)</string>
    <string name="hyangwon_taeyang_s5">
        냐웅 냐냐냥 야옹!\n(하지만 전하의 총애를 받는 우리는 마음대로 드냐들 수 있지!)</string>
    <string name="hyangwon_taeyang_s6">
        냐냥냐 냐우웅 니양\n야옹, 야옹 냐냐냐냥!</string>
    <string name="geunjeong_taepyeong_s1">
        우니양 우냐냐~\n(결국 우리를 모두 찾고 근정전에 왔구냥~)</string>
    <string name="geunjeong_taepyeong_s2">
        냐웅 야오옹~\n(근정전의 ‘근정(勤政)’은 부지런하게 정치하라는 뜻이다냥~)</string>
    <string name="geunjeong_taesaeng_s1">
        미야앙 먕….\n(경복궁의 중심 공간인 만큼 수많은 의식과 행사가 매년 열린다냥….)</string>
    <string name="geunjeong_taesaeng_s2">
        미양 먀오오옹….\n(조선 전기부터 선조까지 총 일곱 명의 즉위식도 이곳에서 열렸다냥….)  </string>
    <string name="geunjeong_taeyang_s1">
        냐냥 냐웅 야오오옹.\n(외국 사신을 접견하면서 불꽃놀이를 하기도 한다냥.)</string>
    <string name="geunjeong_taeyang_s2">
        냐아아앙 냥!\n(또 과거 시험을 치르고 합격자를 발표하는 아주 중요한 곳이다냥!)</string>
    <string name="geunjeong_myojong_s1">
        마침내 태평이, 태생이, 태양이를 다시 품에 안게 되어\n기쁨이 하늘에 닿는 구려!</string>
    <string name="geunjeong_myojong_s2">
        역시 내 사람 보는 눈이 탁월했어!\n약속대로 자네에게 묘1품을 하사토록 하겠네!</string>
    <string name="geunjeong_myojong_s3">
        내 이리 믿음직스러운 자네에게 부탁하고 싶은 일이 많이 있어.\n그 전에 자네만을 위해 준비한 연회를 실컷 즐기도록 하게나.</string>
    <string name="geunjeong_myojong_s4">
        여봐라!\n풍악을 울려라!</string>
</resources>