<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SajeongIn">

    <!-- 사정전 내부 배경 -->
    <ImageView
        android:id="@+id/sajeong_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sajeong_in" />

    <!-- 전각 이름 -->
    <TextView
        android:id="@+id/sajeong_in_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/sajeong_in_title"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#000000" />

    <!-- 묘종 -->
    <ImageView
        android:id="@+id/sajeong_in_myojong"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/myojong"
        android:background="#00ff0000" />

    <!-- 대화창 -->
    <ImageButton
        android:id="@+id/sajeong_in_dialog"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_bg" />

    <!-- 이름표 -->
    <ImageView
        android:id="@+id/sajeong_in_nametag"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/sajeong_in_myojong_s1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/nametag" />

    <!-- 이름 -->
    <TextView
        android:id="@+id/sajeong_in_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_nametag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/myojong_name"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <!-- 대화 내용 -->
    <TextView
        android:id="@+id/sajeong_in_myojong_s1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s1"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

    <TextView
        android:id="@+id/sajeong_in_myojong_s2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s2"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

    <TextView
        android:id="@+id/sajeong_in_myojong_s3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s3"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

    <TextView
        android:id="@+id/sajeong_in_myojong_s4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s4"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

    <TextView
        android:id="@+id/sajeong_in_myojong_s5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s5"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

    <TextView
        android:id="@+id/sajeong_in_myojong_s6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s6"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

    <TextView
        android:id="@+id/sajeong_in_myojong_s7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sajeong_in_dialog"
        app:layout_constraintBottom_toBottomOf="@id/sajeong_in_dialog"
        app:layout_constraintLeft_toLeftOf="@id/sajeong_in_dialog"
        app:layout_constraintVertical_bias="0.6"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:text="@string/sajeong_in_myojong_s7"
        android:textSize="20sp"
        android:textColor="#000000"
        android:maxLines="2" />

</android.support.constraint.ConstraintLayout>